force-app/main/default/objects/Site_Visit__c/fields/Apartment_Type__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Type__c</fullName>
    <label>Apartment Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>