force-app/main/default/objects/Site_Visit__c/fields/Call_to_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Call_to_Site_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call to Site Visit</label>
    <type>Checkbox</type>
</CustomField>