force-app/main/default/objects/Site_Visit__c/fields/Canceled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Reason__c</fullName>
    <label>Not Completed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>