force-app/main/default/objects/Site_Visit__c/fields/Cient_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Cient_Engagement__c</fullName>
    <label>Cient Engagement</label>
    <length>200</length>
    <type>Text</type>
</CustomField>