force-app/main/default/objects/Site_Visit__c/fields/Customer_Visit_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Visit Not Required</label>
    <type>Checkbox</type>
</CustomField>