force-app/main/default/objects/Site_Visit__c/fields/Go_For_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Go_For_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go For Round Robin</label>
    <type>Checkbox</type>
</CustomField>