force-app/main/default/objects/Site_Visit__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <formula>ISBLANK(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_New</label>
    <type>Checkbox</type>
</CustomField>