force-app/main/default/objects/Site_Visit__c/fields/Key_Trigger_for_purchase__c.field-meta.xml
<CustomField>
    <fullName>Key_Trigger_for_purchase__c</fullName>
    <label>Key Trigger for purchase</label>
    <type>TextArea</type>
</CustomField>