force-app/main/default/objects/Site_Visit__c/fields/Lead_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone_Number__c</fullName>
    <formula>SLead__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Phone Number</label>
    <type>Text</type>
</CustomField>