force-app/main/default/objects/Site_Visit__c/fields/Multiple_SV_Count__c.field-meta.xml
<CustomField>
    <fullName>Multiple_SV_Count__c</fullName>
    <label>Multiple SV Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>