force-app/main/default/objects/Site_Visit__c/fields/No_Of_Client_Visit__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Client_Visit__c</fullName>
    <label>No. Of Client Visit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>