force-app/main/default/objects/Site_Visit__c/fields/Plot_type__c.field-meta.xml
<CustomField>
    <fullName>Plot_type__c</fullName>
    <label>Plot type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>