force-app/main/default/objects/Site_Visit__c/fields/Pre_SV_Customer_Requirement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Pre_SV_Customer_Requirement_Summary__c</fullName>
    <label>Pre SV Customer Requirement Summary</label>
    <type>TextArea</type>
</CustomField>