force-app/main/default/objects/Site_Visit__c/fields/Preferrred_Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Preferrred_Construction_Status__c</fullName>
    <label>Preferrred Construction Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>