force-app/main/default/objects/Site_Visit__c/fields/Primary_Apartment_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Apartment_Type__c</fullName>
    <label>Primary Apartment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>