force-app/main/default/objects/Site_Visit__c/fields/Revisit_Count__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Count__c</fullName>
    <label>Revisit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>