force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Drive_Team__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Drive_Team__c</fullName>
    <label>Site Visit Drive Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>