force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Happened__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Happened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Visit Happened</label>
    <type>Checkbox</type>
</CustomField>