force-app/main/default/objects/Site_Visit__c/fields/Source_of_funding__c.field-meta.xml
<CustomField>
    <fullName>Source_of_funding__c</fullName>
    <label>Source of funding</label>
    <length>200</length>
    <type>Text</type>
</CustomField>