force-app/main/default/objects/Site_Visit__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>220</length>
    <type>Text</type>
</CustomField>