force-app/main/default/objects/Site_Visit__c/fields/SV_Ambience_and_cleanliness__c.field-meta.xml
<CustomField>
    <fullName>SV_Ambience_and_cleanliness__c</fullName>
    <label>SV_Ambience and cleanliness</label>
    <length>200</length>
    <type>Text</type>
</CustomField>