force-app/main/default/objects/Site_Visit__c/fields/SV_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>SV_Company_Name__c</fullName>
    <label>SV_Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>