force-app/main/default/objects/Site_Visit__c/fields/SV_Current_Accomadation__c.field-meta.xml
<CustomField>
    <fullName>SV_Current_Accomadation__c</fullName>
    <label>SV_Current Accomadation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>