force-app/main/default/objects/Site_Visit__c/fields/SV_Current_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>SV_Current_Company_Address__c</fullName>
    <label>SV_Current Company Address</label>
    <type>TextArea</type>
</CustomField>