force-app/main/default/objects/Site_Visit__c/fields/SV_Current_Topology__c.field-meta.xml
<CustomField>
    <fullName>SV_Current_Topology__c</fullName>
    <label>SV Current Topology</label>
    <type>TextArea</type>
</CustomField>