force-app/main/default/objects/Site_Visit__c/fields/SV_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>SV_Date_of_Birth__c</fullName>
    <label>SV_Date of Birth</label>
    <type>Date</type>
</CustomField>