force-app/main/default/objects/Site_Visit__c/fields/SV_Designation__c.field-meta.xml
<CustomField>
    <fullName>SV_Designation__c</fullName>
    <label>SV Designation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>