force-app/main/default/objects/Site_Visit__c/fields/SV_DOB__c.field-meta.xml
<CustomField>
    <fullName>SV_DOB__c</fullName>
    <label>SV DOB</label>
    <type>Date</type>
</CustomField>