force-app/main/default/objects/Site_Visit__c/fields/SV_Gender__c.field-meta.xml
<CustomField>
    <fullName>SV_Gender__c</fullName>
    <label>SV Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>