force-app/main/default/objects/Site_Visit__c/fields/SV_Head_Count__c.field-meta.xml
<CustomField>
    <fullName>SV_Head_Count__c</fullName>
    <label>SV Head Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>