force-app/main/default/objects/Site_Visit__c/fields/Sv_Household_Annual_income_Rs__c.field-meta.xml
<CustomField>
    <fullName>Sv_Household_Annual_income_Rs__c</fullName>
    <label>Sv_Household Annual income(Rs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10L- 15L</fullName>
            </value>
            <value>
                <fullName>15L- 20L</fullName>
            </value>
            <value>
                <fullName>20L- 25L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>