force-app/main/default/objects/Site_Visit__c/fields/SV_Is_this_your_first_Home__c.field-meta.xml
<CustomField>
    <fullName>SV_Is_this_your_first_Home__c</fullName>
    <label>SV Is this your first Home</label>
    <length>80</length>
    <type>Text</type>
</CustomField>