force-app/main/default/objects/Site_Visit__c/fields/Sv_Is_this_your_first_home_purchase__c.field-meta.xml
<CustomField>
    <fullName>Sv_Is_this_your_first_home_purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sv_Is this your first home purchase</label>
    <type>Checkbox</type>
</CustomField>