force-app/main/default/objects/Site_Visit__c/fields/SV_Occupation_Employment__c.field-meta.xml
<CustomField>
    <fullName>SV_Occupation_Employment__c</fullName>
    <label>SV Occupation/Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Professional/Salaried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>