force-app/main/default/objects/Site_Visit__c/fields/Sv_Other_media_Name__c.field-meta.xml
<CustomField>
    <fullName>Sv_Other_media_Name__c</fullName>
    <label>Sv_Other media Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>