force-app/main/default/objects/Site_Visit__c/fields/SV_Pincode__c.field-meta.xml
<CustomField>
    <fullName>SV_Pincode__c</fullName>
    <label>SV_Pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>