force-app/main/default/objects/Site_Visit__c/fields/Sv_Quality_of_Information__c.field-meta.xml
<CustomField>
    <fullName>Sv_Quality_of_Information__c</fullName>
    <label>Sv_Quality of Information</label>
    <length>200</length>
    <type>Text</type>
</CustomField>