force-app/main/default/objects/Site_Visit__c/fields/Sv_Rank_Amenities_of_the_Project__c.field-meta.xml
<CustomField>
    <fullName>Sv_Rank_Amenities_of_the_Project__c</fullName>
    <label>Sv_Rank Amenities of the Project</label>
    <length>200</length>
    <type>Text</type>
</CustomField>