force-app/main/default/objects/Site_Visit__c/fields/Sv_Rate_the_product_brochure_and_the_AV__c.field-meta.xml
<CustomField>
    <fullName>Sv_Rate_the_product_brochure_and_the_AV__c</fullName>
    <label>Sv_Rate the product brochure and the AV</label>
    <length>200</length>
    <type>Text</type>
</CustomField>