force-app/main/default/objects/Site_Visit__c/fields/SV_Reason_for_Purchase__c.field-meta.xml
<CustomField>
    <fullName>SV_Reason_for_Purchase__c</fullName>
    <label>SV Reason for Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Use</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>For Relatives/Friends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>