force-app/main/default/objects/Site_Visit__c/fields/Villa_Type__c.field-meta.xml
<CustomField>
    <fullName>Villa_Type__c</fullName>
    <label>Villa Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>