force-app/main/default/objects/Site_Visit__c/fields/Visited_Event__c.field-meta.xml
<CustomField>
    <fullName>Visited_Event__c</fullName>
    <label>Visited Event</label>
    <length>200</length>
    <type>Text</type>
</CustomField>