force-app/main/default/objects/Site_Visit__c/validationRules/Reschedule_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reschedule_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    
    ISPICKVAL(Status__c, &apos;Rescheduled&apos;),
    OR(
        ISBLANK(Reschedule_Date__c),
        Reschedule_Date__c &lt;= NOW()
    )
)</errorConditionFormula>
    <errorDisplayField>Reschedule_Date__c</errorDisplayField>
    <errorMessage>Please Select Reschedule Date and Time that is in the future.</errorMessage>
</ValidationRule>