force-app/main/default/objects/Site_Visit__c/validationRules/RescheduleDate_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>RescheduleDate_Mandatory</fullName>
    <active>false</active>
    <description>RescheduleDate Mandatory when status is changed to Reschedule</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c , &apos;Rescheduled&apos;),
    OR(
        ISBLANK(Reschedule_Date__c),
        Reschedule_Date__c &lt;= NOW()
    )
)</errorConditionFormula>
    <errorMessage>Please select a future Reschedule Date.</errorMessage>
</ValidationRule>