force-app/main/default/objects/Site_Visit__c/validationRules/Schedule_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        AND(
            ISPICKVAL(Status__c, &quot;Scheduled&quot;),
            Date__c &lt; NOW(),
												 ISNEW() 
        )
    )
)</errorConditionFormula>
    <errorMessage>Please select future date / time</errorMessage>
</ValidationRule>