force-app/main/default/objects/Site_Visit__c/listViews/Copy_of_Today_s_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Copy_of_Today_s_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>SLead__c</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>Source1__c</columns>
    <columns>SV_Completed_Date_Time__c</columns>
    <columns>Project__c</columns>
    <columns>Site_Visit_rating__c</columns>
    <columns>Canceled_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday&apos;s Site Visits</label>
</ListView>